--- a/pay-ui/src/app/auth/register/register.component.html
+++ b/pay-ui/src/app/auth/register/register.component.html
@@ -6,6 +6,10 @@
     <div class="panel-body">
         <form class="form-horizontal" novalidate (ngSubmit)="save()" [formGroup]="customerForm">
             <fieldset>
+
+
+
+
                 <div class="form-group" [ngClass]="{'has-error': (customerForm.get('firstName').touched || 
                                               customerForm.get('firstName').dirty) &&
                                               !customerForm.get('firstName').valid }">
@@ -26,6 +30,26 @@
                     </div>
                 </div>
 
+
+
+
+
+
+
+
+
+
+                <div [hidden]="!showMiddle" class="form-group" [ngClass]="{'has-error': (customerForm.get('middleName').touched || 
+                                              customerForm.get('middleName').dirty) &&
+                                              !customerForm.get('middleName').valid }">
+                    <label class="col-md-2 control-label" for="middleNameId">Middle Name</label>
+
+                    <div class="col-md-8">
+                        <input class="form-control" id="middleNameId" type="text" placeholder="Middle Name (optional)" formControlName="middleName" />
+                    </div>
+                </div>
+
+
                 <div class="form-group" [ngClass]="{'has-error': (customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && !customerForm.get('lastName').valid }">
                     <label class="col-md-2 control-label" for="lastNameId">Last Name</label>
 
@@ -42,47 +66,104 @@
                     </div>
                 </div>
 
-                <div formGroupName="emailGroup" [ngClass]="{'has-error': customerForm.get('emailGroup').errors }">
 
-                    <div class="form-group" [ngClass]="{'has-error': emailMessage}">
-                        <label class="col-md-2 control-label" for="emailId">Email</label>
+                <div class="form-group" [ngClass]="{'has-error': (customerForm.get('preferredName').touched || 
+                                              customerForm.get('preferredName').dirty) &&
+                                              !customerForm.get('preferredName').valid }">
+                    <label class="col-md-2 control-label" for="preferredNameId">Preferred Name</label>
+
+                    <div class="col-md-8">
+                        <input class="form-control" id="preferredNameId" type="text" placeholder="Preferred Name (optional)" formControlName="preferredName" />
+                    </div>
+                </div>
+
+
+
+
+
+                <div class="form-group" [ngClass]="{'has-error': (customerForm.get('email').touched || customerForm.get('email').dirty) && !customerForm.get('email').valid }">
+                    <label class="col-md-2 control-label" for="emailId">Email Address</label>
+
+                    <div class="col-md-8">
+                        <input class="form-control" id="emailId" type="text" placeholder="Email Address (required)" formControlName="email" />
+                        <span class="help-block" *ngIf="(customerForm.get('email').touched || customerForm.get('email').dirty) && customerForm.get('email').errors">
+                            <span *ngIf="customerForm.get('email').errors.required">
+                                Please enter your email address.
+                            </span>
+                        <span *ngIf="customerForm.controls.email.errors.pattern">
+                                Please enter a valid email address.
+                            </span>
+                        </span>
+                    </div>
+                </div>
+
+                <!-- password, confirm-->
+                <div formGroupName="passwordGroup" [ngClass]="{'has-error': customerForm.get('passwordGroup').errors }">
+
+                    <div class="form-group" [ngClass]="{'has-error': customerForm.get('passwordGroup').errors }">
+                        <label class="col-md-2 control-label" for="passwordId">Password</label>
 
                         <div class="col-md-8">
-                            <input class="form-control" id="emailId" type="email" placeholder="Email (required)" formControlName="email" />
-                            <span class="help-block" *ngIf="emailMessage">
-                                {{ emailMessage }}
+                            <input class="form-control" id="passwordId" type="password" placeholder="Password (required)" formControlName="password" />
+                            <!-- <span class="help-block" *ngIf="(customerForm.get('passwordGroup.password').touched || 
+                                                            customerForm.get('passwordGroup.password').dirty) && 
+                                                            (customerForm.get('passwordGroup.password').errors ||
+                                                             customerForm.get('password').errors)">
+                            <span *ngIf="customerForm.get('passwordGroup.password').errors?.required">
+                                    Please enter your password.
+                                </span>
+
+                            <span *ngIf="customerForm.get('passwordGroup.password').errors?.minlength">
+                                   Password must contain minimum of 6 characters.
+                                </span>
+                            </span> -->
+                            <span class="help-block" *ngIf="passwordMessage">
+                                {{ passwordMessage }}
                             </span>
                         </div>
                     </div>
 
-                    <div class="form-group" [ngClass]="{'has-error': (customerForm.get('emailGroup.confirmEmail').touched || 
-                                                  customerForm.get('emailGroup.confirmEmail').dirty) && 
-                                                  !customerForm.get('emailGroup.confirmEmail').valid }">
-                        <label class="col-md-2 control-label" for="confirmEmailId">Confirm Email</label>
+                    <div class="form-group" [ngClass]="{'has-error': (customerForm.get('passwordGroup.confirmPassword').touched || 
+                                                  customerForm.get('passwordGroup.confirmPassword').dirty) && 
+                                                  !customerForm.get('passwordGroup.confirmPassword').valid }">
+                        <label class="col-md-2 control-label" for="confirmPasswordId">Confirm Password</label>
 
                         <div class="col-md-8">
-                            <input class="form-control" id="confirmEmailId" type="email" placeholder="Confirm Email (required)" formControlName="confirmEmail" />
-                            <span class="help-block" *ngIf="(customerForm.get('emailGroup.confirmEmail').touched || 
-                                                            customerForm.get('emailGroup.confirmEmail').dirty) && 
-                                                            (customerForm.get('emailGroup.confirmEmail').errors ||
-                                                             customerForm.get('emailGroup').errors)">
-                                <span *ngIf="customerForm.get('emailGroup.confirmEmail').errors?.required">
-                                    Please confirm your email address.
+                            <input class="form-control" id="confirmPasswordId" type="password" placeholder="Confirm Password (required)" formControlName="confirmPassword" />
+                            <span class="help-block" *ngIf="(customerForm.get('passwordGroup.confirmPassword').touched || 
+                                                            customerForm.get('passwordGroup.confirmPassword').dirty) && 
+                                                            (customerForm.get('passwordGroup.confirmPassword').errors ||
+                                                             customerForm.get('passwordGroup').errors)">
+                                <span *ngIf="customerForm.get('passwordGroup.confirmPassword').errors?.required">
+                                    Please confirm your password.
                                 </span>
-                            <span *ngIf="customerForm.get('emailGroup').errors?.match">
-                                    The confirmation does not match the email address.
+                            <span *ngIf="customerForm.get('passwordGroup').errors?.match">
+                                    The confirm password does not match with the password.
                                 </span>
                             </span>
                         </div>
                     </div>
                 </div>
+                <!-- password -->
 
-                <div class="form-group" [ngClass]="{'has-error': !customerForm.get('phone').valid }">
+
+
+
+
+
+
+
+
+
+
+                <div class="form-group" [ngClass]="{'has-error': (customerForm.get('phone').touched || 
+                                              customerForm.get('phone').dirty) &&
+                                              !customerForm.get('phone').valid }">
                     <label class="col-md-2 control-label" for="phoneId">Phone</label>
 
                     <div class="col-md-8">
                         <input class="form-control" id="phoneId" type="tel" placeholder="Phone" formControlName="phone" />
-                        <span class="help-block" *ngIf="customerForm.get('phone').errors">
+                        <span class="help-block" *ngIf="(customerForm.get('phone').touched || customerForm.get('phone').dirty) && customerForm.get('phone').errors">
                             <span *ngIf="customerForm.get('phone').errors.required">
                                 Please enter your phone number.
                             </span>
@@ -90,121 +171,18 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <label class="col-md-2 control-label">Send Notifications</label>
-                    <div class="col-md-8">
-                        <label class="radio-inline">
-                                <input type="radio" 
-                                       value="email" 
-                                       formControlName = "notification">Email
-                            </label>
-                        <label class="radio-inline">
-                                <input type="radio" 
-                                       value="text" 
-                                       formControlName = "notification">Text
-                            </label>
-                    </div>
-                </div>
-
-                <div class="form-group" [ngClass]="{'has-error': (customerForm.get('rating').touched || 
-                                              customerForm.get('rating').dirty) && 
-                                              !customerForm.get('rating').valid }">
-                    <label class="col-md-2 control-label" for="ratingId">Rating</label>
+                <div class="form-group" [ngClass]="{'has-error': (customerForm.get('countryCode').touched || 
+                                              customerForm.get('countryCode').dirty) &&
+                                              !customerForm.get('countryCode').valid }">
+                    <label class="col-md-2 control-label" for="countryCodephoneId">Mobile Country Code</label>
 
                     <div class="col-md-8">
-                        <input class="form-control" id="ratingId" type="number" formControlName="rating" />
-                        <span class="help-block" *ngIf="(customerForm.get('rating').touched 
-                                                         || customerForm.get('rating').dirty) && 
-                                                         customerForm.get('rating').errors">
-                             <span *ngIf="customerForm.get('rating').errors.range">
-                                Please rate your experience from 1 to 5.
+                        <input class="form-control" id="countryCodeId" type="tel" placeholder="Mobile Country Code" formControlName="countryCode" />
+                        <span class="help-block" *ngIf="(customerForm.get('countryCode').touched || customerForm.get('countryCode').dirty) && customerForm.get('countryCode').errors">
+                            <span *ngIf="customerForm.get('countryCode').errors.required">
+                                Please select your mobile country code.
                             </span>
                         </span>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-md-offset-1 col-md-8 checkbox">
-                        <label>
-                            <input id="sendCatalogId"
-                                   type="checkbox"
-                                   formControlName = "sendCatalog" >
-                            Send me your catalog
-                        </label>
-                    </div>
-                </div>
-
-                <div *ngIf="customerForm.get('sendCatalog').value">
-                    <div class="form-group">
-                        <div class="col-md-4 col-md-offset-2">
-                            <span>
-                                <button class="btn btn-primary"
-                                        type="button"
-		                                [disabled]="!addresses.valid"
-                                        (click)="addAddress()">
-                                    Add Another Address
-                                </button>
-                            </span>
-                        </div>
-                    </div>
-
-                    <div formArrayName="addresses" *ngFor="let address of addresses.controls; let i=index">
-                        <div [formGroupName]="i">
-                            <div class="form-group">
-                                <label class="col-md-2 control-label" attr.for="{{'addressType1Id' + i}}">Address Type</label>
-                                <div class="col-md-8">
-                                    <label class="radio-inline">
-                                        <input type="radio" id="{{'addressType1Id' + i}}" value="home"
-                                        formControlName="addressType">Home
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" id="{{'addressType1Id' + i}}" value="work"
-                                        formControlName="addressType">Work
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" id="{{'addressType1Id' + i}}" value="other"
-                                        formControlName="addressType">Other
-                                    </label>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-md-2 control-label" attr.for="{{'street1Id' + i}}">Street Address 1</label>
-                                <div class="col-md-8">
-                                    <input type="text" class="form-control" id="{{'street1Id' + i}}" placeholder="Street address" formControlName="street1">
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-md-2 control-label" attr.for="{{'street2Id' + i}}">Street Address 2</label>
-                                <div class="col-md-8">
-                                    <input type="text" class="form-control" id="{{'street2Id' + i}}" placeholder="Street address (second line)" formControlName="street2">
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-md-2 control-label" attr.for="{{'cityId' + i}}">City, State, Zip Code</label>
-                                <div class="col-md-3">
-                                    <input type="text" class="form-control" id="{{'cityId' + i}}" placeholder="City" formControlName="city">
-                                </div>
-                                <div class="col-md-3">
-                                    <select class="form-control" id="{{'stateId' + i}}" formControlName="state">
-                                        <option value="" disabled selected hidden>Select a State...</option>
-                                        <option value="AL">Alabama</option>
-                                        <option value="AK">Alaska</option>
-                                        <option value="AZ">Arizona</option>
-                                        <option value="AR">Arkansas</option>
-                                        <option value="CA">California</option>
-                                        <option value="CO">Colorado</option>
-                                        <option value="WI">Wisconsin</option>
-                                        <option value="WY">Wyoming</option>
-                                    </select>
-                                </div>
-                                <div class="col-md-2">
-                                    <input type="number" class="form-control" id="{{'zipId' + i}}" placeholder="Zip Code" formControlName="zip">
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
 
@@ -217,21 +195,10 @@
                                 Save
                             </button>
                         </span>
-                        <span>
-                            <button class="btn btn-default"
-                                    type="button"
-                                    (click)="populateTestData()">
-                                Test Data
-                            </button>
-                        </span>
+
                     </div>
                 </div>
             </fieldset>
         </form>
     </div>
 </div>
-<br>Dirty: {{ customerForm.dirty }}
-<br>Touched: {{ customerForm.touched }}
-<br>Valid: {{ customerForm.valid }}
-<br>Value: {{ customerForm.value | json }}
-<br>Street: {{ addresses.get('0.street1')?.value }}
