--- a/pay-ui/src/app/auth/register/register.component.html
+++ b/pay-ui/src/app/auth/register/register.component.html
@@ -1,4 +1,5 @@
 <div class="panel panel-primary">
+    <p-messages [(value)]="msgs"></p-messages>
     <div class="panel-heading">
         Sign Up!
     </div>
