--- a/pay-ui/src/app/customer/customer.component.html
+++ b/pay-ui/src/app/customer/customer.component.html
@@ -1,3 +1,82 @@
-<p>
-  customer works!
-</p>
+<div class="panel panel-primary">
+    <p-messages [(value)]="msgs"></p-messages>
+    <div class="panel-heading">
+        Sign Up!
+    </div>
+
+    <div class="panel-body">
+        <form class="form-horizontal">
+            <fieldset>
+                <div class="form-group">
+                    <label class="col-md-3 control-label" for="firstNameId">First Name</label>
+
+                    <div class="col-md-5">
+                        {{customer.firstName}}
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-md-3 control-label" for="middleNameId">Middle Name</label>
+                    <div class="col-md-5">
+                        {{customer.middleName}}
+                    </div>
+                </div>
+
+
+                <div class="form-group">
+                    <label class="col-md-3 control-label" for="lastNameId">Last Name</label>
+
+                    <div class="col-md-5">
+                        {{customer.lastName}}
+                    </div>
+                </div>
+
+
+                <div class="form-group">
+                    <label class="col-md-3 control-label" for="preferredNameId">Preferred Name</label>
+
+                    <div class="col-md-5">
+                        {{customer.preferredName}}
+                    </div>
+                </div>
+
+
+
+                <div class="form-group">
+                    <label class="col-md-3 control-label" for="emailId">Email Address</label>
+
+                    <div class="col-md-5">
+                        {{customer.email}}
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-md-3 control-label" for="phoneId">Phone</label>
+
+                    <div class="col-md-5">
+                        {{customer.mobile}}
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-md-3 control-label" for="countryCodephoneId">Mobile Country Code</label>
+
+                    <div class="col-md-5">
+                        {{customer.countryCode}}
+                    </div>
+                </div>
+
+                <br />
+                <div class="form-group">
+                    <div class="col-md-2"></div>
+                    <div class=" col-md-4 col-md-offset-2 ">
+                        <span>
+                            <button class="btn btn-primary" type="button" (click)="Edit()" >Edit</button>
+                        </span>
+
+                    </div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
+</div>
