editcustomre form disable logic

--- a/pay-ui/src/app/edit-customer/edit-customer.component.html
+++ b/pay-ui/src/app/edit-customer/edit-customer.component.html
@@ -1,7 +1,7 @@
 <div class="panel panel-primary">
     <p-messages [(value)]="msgs"></p-messages>
     <div class="panel-heading">
-        Sign Up!
+        Update Customer Details!
     </div>
 
     <div class="panel-body">
@@ -14,10 +14,10 @@
                 <div class="form-group" [ngClass]="{'has-error': (customerForm.get('firstName').touched || 
                                               customerForm.get('firstName').dirty) &&
                                               !customerForm.get('firstName').valid }">
-                    <label class="col-md-3 control-label" for="firstNameId">First Name</label>
+                    <label class="col-md-3 control-label label-disabled" for="firstNameId">First Name</label>
 
                     <div class="col-md-5">
-                        <input class="form-control" id="firstNameId" type="text" placeholder="First Name (required)" formControlName="firstName" />
+                        <input disabled=true class="form-control" id="firstNameId" type="text" placeholder="First Name (required)" formControlName="firstName" />
                         <span class="help-block" *ngIf="(customerForm.get('firstName').touched || 
                                                          customerForm.get('firstName').dirty) && 
                                                          customerForm.get('firstName').errors">
@@ -43,19 +43,19 @@
                 <div [hidden]="!showMiddle" class="form-group" [ngClass]="{'has-error': (customerForm.get('middleName').touched || 
                                               customerForm.get('middleName').dirty) &&
                                               !customerForm.get('middleName').valid }">
-                    <label class="col-md-3 control-label" for="middleNameId">Middle Name</label>
+                    <label class="col-md-3 control-label label-disabled" for="middleNameId">Middle Name</label>
 
                     <div class="col-md-5">
-                        <input class="form-control" id="middleNameId" type="text" placeholder="Middle Name (optional)" formControlName="middleName" />
+                        <input disabled=true class="form-control" id="middleNameId" type="text" placeholder="Middle Name (optional)" formControlName="middleName" />
                     </div>
                 </div>
 
 
                 <div class="form-group" [ngClass]="{'has-error': (customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && !customerForm.get('lastName').valid }">
-                    <label class="col-md-3 control-label" for="lastNameId">Last Name</label>
+                    <label class="col-md-3 control-label label-disabled" for="lastNameId">Last Name</label>
 
                     <div class="col-md-5">
-                        <input class="form-control" id="lastNameId" type="text" placeholder="Last Name (required)" formControlName="lastName" />
+                        <input disabled=true class="form-control" id="lastNameId" type="text" placeholder="Last Name (required)" formControlName="lastName" />
                         <span class="help-block" *ngIf="(customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && customerForm.get('lastName').errors">
                             <span *ngIf="customerForm.get('lastName').errors.required">
                                 Please enter your last name.
@@ -71,10 +71,10 @@
                 <div class="form-group" [ngClass]="{'has-error': (customerForm.get('preferredName').touched || 
                                               customerForm.get('preferredName').dirty) &&
                                               !customerForm.get('preferredName').valid }">
-                    <label class="col-md-3 control-label" for="preferredNameId">Preferred Name</label>
+                    <label class="col-md-3 control-label label-disabled" for="preferredNameId">Preferred Name</label>
 
                     <div class="col-md-5">
-                        <input class="form-control" id="preferredNameId" type="text" placeholder="Preferred Name (optional)" formControlName="preferredName" />
+                        <input disabled=true class="form-control" id="preferredNameId" type="text" placeholder="Preferred Name (optional)" formControlName="preferredName" />
                     </div>
                 </div>
 
@@ -83,10 +83,10 @@
 
 
                 <div class="form-group" [ngClass]="{'has-error': (customerForm.get('email').touched || customerForm.get('email').dirty) && !customerForm.get('email').valid }">
-                    <label class="col-md-3 control-label" for="emailId">Email Address</label>
+                    <label class="col-md-3 control-label label-disabled" for="emailId">Email Address</label>
 
                     <div class="col-md-5">
-                        <input class="form-control" id="emailId" type="text" placeholder="Email Address (required)" formControlName="email" />
+                        <input disabled=true class="form-control" id="emailId" type="text" placeholder="Email Address (required)" formControlName="email" />
                         <span class="help-block" *ngIf="(customerForm.get('email').touched || customerForm.get('email').dirty) && customerForm.get('email').errors">
                             <span *ngIf="customerForm.get('email').errors.required">
                                 Please enter your email address.
