--- a/pay-ui/src/app/customer/customer.component.html
+++ b/pay-ui/src/app/customer/customer.component.html
@@ -1,68 +1,75 @@
 <div class="panel panel-primary">
     <p-messages [(value)]="msgs"></p-messages>
     <div class="panel-heading">
-        Sign Up!
+        View Customer Details!
     </div>
 
     <div class="panel-body">
         <form class="form-horizontal">
             <fieldset>
                 <div class="form-group">
-                    <label class="col-md-3 control-label" for="firstNameId">First Name</label>
+                    <label class="col-md-3 control-label" for="firstNameId">First Name :</label>
 
                     <div class="col-md-5">
-                        {{customer.firstName}}
+                        <label class="control-label label-alter">{{customer.firstName}}</label>
+                        <!-- {{customer.firstName}} -->
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="col-md-3 control-label" for="middleNameId">Middle Name</label>
+                    <label class="col-md-3 control-label" for="middleNameId">Middle Name :</label>
                     <div class="col-md-5">
-                        {{customer.middleName}}
-                    </div>
-                </div>
-
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label" for="lastNameId">Last Name</label>
-
-                    <div class="col-md-5">
-                        {{customer.lastName}}
+                        <label class="control-label label-alter">{{customer.middleName}}</label>
+                        <!-- {{customer.middleName}} -->
                     </div>
                 </div>
 
 
                 <div class="form-group">
-                    <label class="col-md-3 control-label" for="preferredNameId">Preferred Name</label>
+                    <label class="col-md-3 control-label" for="lastNameId">Last Name :</label>
 
                     <div class="col-md-5">
-                        {{customer.preferredName}}
+                        <label class="control-label label-alter">{{customer.lastName}}</label>
+                        <!-- {{customer.lastName}} -->
+                    </div>
+                </div>
+
+
+                <div class="form-group">
+                    <label class="col-md-3 control-label" for="preferredNameId">Preferred Name :</label>
+
+                    <div class="col-md-5">
+                        <label class="control-label label-alter">{{customer.preferredName}}</label>
+                        <!-- {{customer.preferredName}} -->
                     </div>
                 </div>
 
 
 
                 <div class="form-group">
-                    <label class="col-md-3 control-label" for="emailId">Email Address</label>
+                    <label class="col-md-3 control-label" for="emailId">Email Address :</label>
 
                     <div class="col-md-5">
-                        {{customer.email}}
+                        <label class="control-label label-alter">{{customer.email}}</label>
+                        <!-- {{customer.email}} -->
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="col-md-3 control-label" for="phoneId">Phone</label>
+                    <label class="col-md-3 control-label" for="phoneId">Phone :</label>
 
                     <div class="col-md-5">
-                        {{customer.mobile}}
+                        <label class="control-label label-alter">{{customer.mobile}}</label>
+                        <!-- {{customer.mobile}} -->
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="col-md-3 control-label" for="countryCodephoneId">Mobile Country Code</label>
+                    <label class="col-md-3 control-label" for="countryCodephoneId">Mobile Country Code :</label>
 
                     <div class="col-md-5">
-                        {{customer.countryCode}}
+                        <label class="control-label label-alter">{{customer.countryCode}}</label>
+                        <!-- {{customer.countryCode}} -->
                     </div>
                 </div>
 
@@ -71,7 +78,7 @@
                     <div class="col-md-2"></div>
                     <div class=" col-md-4 col-md-offset-2 ">
                         <span>
-                            <button class="btn btn-primary" type="button" (click)="Edit()" >Edit</button>
+                            <button  class="btn btn-primary" type="button" (click)="Edit()" >Edit</button>
                         </span>
 
                     </div>
