--- a/pay-ui/src/app/customer/customer.component.html
+++ b/pay-ui/src/app/customer/customer.component.html
@@ -5,85 +5,95 @@
     </div>
 
     <div class="panel-body">
-        <form class="form-horizontal">
-            <fieldset>
-                <div class="form-group">
-                    <label class="col-md-3 control-label" for="firstNameId">First Name :</label>
 
-                    <div class="col-md-5">
-                        <label class="control-label label-alter">{{customer.firstName}}</label>
-                        <!-- {{customer.firstName}} -->
+        <div class="col-sm-5">
+
+            Current Balance: {{walletBalance}}
+            <br>
+            <input type="button" value="PAY">
+        </div>
+
+        <div class="col-sm-7">
+            <form class="form-horizontal">
+                <fieldset>
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" for="firstNameId">First Name :</label>
+
+                        <div class="col-md-5">
+                            <label class="control-label label-alter">{{customer.firstName}}</label>
+                            <!-- {{customer.firstName}} -->
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label" for="middleNameId">Middle Name :</label>
-                    <div class="col-md-5">
-                        <label class="control-label label-alter">{{customer.middleName}}</label>
-                        <!-- {{customer.middleName}} -->
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" for="middleNameId">Middle Name :</label>
+                        <div class="col-md-5">
+                            <label class="control-label label-alter">{{customer.middleName}}</label>
+                            <!-- {{customer.middleName}} -->
+                        </div>
                     </div>
-                </div>
 
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label" for="lastNameId">Last Name :</label>
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" for="lastNameId">Last Name :</label>
 
-                    <div class="col-md-5">
-                        <label class="control-label label-alter">{{customer.lastName}}</label>
-                        <!-- {{customer.lastName}} -->
+                        <div class="col-md-5">
+                            <label class="control-label label-alter">{{customer.lastName}}</label>
+                            <!-- {{customer.lastName}} -->
+                        </div>
                     </div>
-                </div>
 
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label" for="preferredNameId">Preferred Name :</label>
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" for="preferredNameId">Preferred Name :</label>
 
-                    <div class="col-md-5">
-                        <label class="control-label label-alter">{{customer.preferredName}}</label>
-                        <!-- {{customer.preferredName}} -->
+                        <div class="col-md-5">
+                            <label class="control-label label-alter">{{customer.preferredName}}</label>
+                            <!-- {{customer.preferredName}} -->
+                        </div>
                     </div>
-                </div>
 
 
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label" for="emailId">Email Address :</label>
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" for="emailId">Email Address :</label>
 
-                    <div class="col-md-5">
-                        <label class="control-label label-alter">{{customer.email}}</label>
-                        <!-- {{customer.email}} -->
+                        <div class="col-md-5">
+                            <label class="control-label label-alter">{{customer.email}}</label>
+                            <!-- {{customer.email}} -->
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label" for="phoneId">Phone :</label>
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" for="phoneId">Phone :</label>
 
-                    <div class="col-md-5">
-                        <label class="control-label label-alter">{{customer.mobile}}</label>
-                        <!-- {{customer.mobile}} -->
+                        <div class="col-md-5">
+                            <label class="control-label label-alter">{{customer.mobile}}</label>
+                            <!-- {{customer.mobile}} -->
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label" for="countryCodephoneId">Mobile Country Code :</label>
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" for="countryCodephoneId">Mobile Country Code :</label>
 
-                    <div class="col-md-5">
-                        <label class="control-label label-alter">{{customer.countryCode}}</label>
-                        <!-- {{customer.countryCode}} -->
+                        <div class="col-md-5">
+                            <label class="control-label label-alter">{{customer.countryCode}}</label>
+                            <!-- {{customer.countryCode}} -->
+                        </div>
                     </div>
-                </div>
 
-                <br />
-                <div class="form-group">
-                    <div class="col-md-2"></div>
-                    <div class=" col-md-4 col-md-offset-2 ">
-                        <span>
+                    <br />
+                    <div class="form-group">
+                        <div class="col-md-2"></div>
+                        <div class=" col-md-4 col-md-offset-2 ">
+                            <span>
                             <button  class="btn btn-primary" type="button" (click)="Edit()" >Edit</button>
                         </span>
 
+                        </div>
                     </div>
-                </div>
-            </fieldset>
-        </form>
+                </fieldset>
+            </form>
+        </div>
     </div>
 </div>
