--- a/pay-ui/src/app/app.component.css
+++ b/pay-ui/src/app/app.component.css
@@ -1,17 +1,29 @@
 .dropdownChild {
   width: 10%;
   border: 1px solid #eee;
+  position: absolute;
+  top:3.2% !important;
+  left:1% !important;
+  background: #fff;
+  z-index: 9999999;
 }
 
 .dropdownChild ul li {
   list-style: none;
   padding: 3px;
+  padding-left: 15px;
+}
+.login-a-user{
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .dropdownChild ul li:hover {
   background-color: #337ab7;
 }
-
+.dropdownChild ul {
+padding: 0;
+}
 .dropdownChild ul li a {
   text-decoration: none;
 }
