--- a/pay-ui/src/app/app.component.html
+++ b/pay-ui/src/app/app.component.html
@@ -1,13 +1,12 @@
 <div class="wrapper">
-<a class="link hidden-xs dropdown-toggle show" uib-dropdown-toggle="" aria-haspopup="true" aria-expanded="false">
+<a class="login-a-user" (click)="togglepop()" >
     <i class="fa fa-user-circle-o" aria-hidden="true"></i>
   Hi,
   <span data-ng-bind="vm.headData.data.customerName | titleCase">Harish Nalla</span>
   <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
 </a>
-
 </div>
-<div class="dropdownChild">
+<div class="dropdownChild" [hidden]="isPopIn">
     <ul><li>
     <a class="dropdown-item">My Profile</a></li>
     <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
