Get Login User and Put Session

--- a/pay-ui/src/app/app.component.html
+++ b/pay-ui/src/app/app.component.html
@@ -2,7 +2,7 @@
 <a class="login-a-user" (click)="togglepop()" >
     <i class="fa fa-user-circle-o" aria-hidden="true"></i>
   Hi,
-  <span data-ng-bind="vm.headData.data.customerName | titleCase">Harish Nalla</span>
+  <span data-ng-bind="vm.headData.data.customerName | titleCase">{{UserName}}</span>
   <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
 </a>
 </div>
