--- a/pay-ui/src/app/app.component.html
+++ b/pay-ui/src/app/app.component.html
@@ -1,17 +1,18 @@
-<div class="wrapper">
+<div class="wrapper" *ngIf="!Isheader">
 <a class="login-a-user" (click)="togglepop()" >
     <i class="fa fa-user-circle-o" aria-hidden="true"></i>
   Hi,
   <span data-ng-bind="vm.headData.data.customerName | titleCase">{{UserName}}</span>
   <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
 </a>
-</div>
 <div class="dropdownChild" [hidden]="isPopIn">
-    <ul><li>
-    <a class="dropdown-item">My Profile</a></li>
-    <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
-    </ul>
-  </div>
+  <ul><li>
+  <a class="dropdown-item">My Profile</a></li>
+  <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
+  </ul>
+</div>
+</div>
+
 <spinner [spinner]="spinkit.skDoubleBounce" [backgroundColor]="'#337ab7'"></spinner>
 <router-outlet>
 </router-outlet>
