/stripe call integration success

--- a/pay-ui/src/app/payment/payment.component.html
+++ b/pay-ui/src/app/payment/payment.component.html
@@ -13,8 +13,6 @@
     <!-- <br> CVC: <input type="tel" type="tel" autocomplete="cc-cvc" id="cc-csc" ccCvc> -->
     <br><br>
 
-    <button class="btn btn-primary" type="submit" [disabled]="!formGroup.valid">
-                                PAY
-                            </button>
+    <button class="btn btn-primary" type="submit">PAY</button>
 
 </form>
