--- a/pay-ui/src/app/customer/customer.component.html
+++ b/pay-ui/src/app/customer/customer.component.html
@@ -20,7 +20,7 @@
                         <label class="col-md-3 control-label" for="firstNameId">First Name :</label>
 
                         <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer.firstName}}</label>
+                            <label class="control-label label-alter">{{customer?.firstName}}</label>
                             <!-- {{customer.firstName}} -->
                         </div>
                     </div>
@@ -28,7 +28,7 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label" for="middleNameId">Middle Name :</label>
                         <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer.middleName}}</label>
+                            <label class="control-label label-alter">{{customer?.middleName}}</label>
                             <!-- {{customer.middleName}} -->
                         </div>
                     </div>
@@ -38,7 +38,7 @@
                         <label class="col-md-3 control-label" for="lastNameId">Last Name :</label>
 
                         <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer.lastName}}</label>
+                            <label class="control-label label-alter">{{customer?.lastName}}</label>
                             <!-- {{customer.lastName}} -->
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                         <label class="col-md-3 control-label" for="preferredNameId">Preferred Name :</label>
 
                         <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer.preferredName}}</label>
+                            <label class="control-label label-alter">{{customer?.preferredName}}</label>
                             <!-- {{customer.preferredName}} -->
                         </div>
                     </div>
@@ -59,7 +59,7 @@
                         <label class="col-md-3 control-label" for="emailId">Email Address :</label>
 
                         <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer.email}}</label>
+                            <label class="control-label label-alter">{{customer?.email}}</label>
                             <!-- {{customer.email}} -->
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                         <label class="col-md-3 control-label" for="phoneId">Phone :</label>
 
                         <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer.mobile}}</label>
+                            <label class="control-label label-alter">{{customer?.mobile}}</label>
                             <!-- {{customer.mobile}} -->
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                         <label class="col-md-3 control-label" for="countryCodephoneId">Mobile Country Code :</label>
 
                         <div class="col-md-5">
-                            <label class="control-label label-alter">{{customer.countryCode}}</label>
+                            <label class="control-label label-alter">{{customer?.countryCode}}</label>
                             <!-- {{customer.countryCode}} -->
                         </div>
                     </div>
