--- a/pay-ui/src/app/payment/payment.component.html
+++ b/pay-ui/src/app/payment/payment.component.html
@@ -1,3 +1,11 @@
+<p-dialog header="Title" [(visible)]="display">
+    Payment Successful.
+
+    <button class="btn btn-primary" type="button" (click)="gotoProfile()">OK</button>
+
+
+</p-dialog>
+
 <form class="form-horizontal" novalidate (ngSubmit)="pay()" [formGroup]="formGroup">
 
 
