login, register UI

--- a/pay-ui/src/app/payment/payment.component.html
+++ b/pay-ui/src/app/payment/payment.component.html
@@ -9,8 +9,13 @@
 
 <form class="form-horizontal" novalidate (ngSubmit)="pay()" [formGroup]="formGroup">
 
+    <!-- Name:
+    <div>
+        <input type="text" formControlName="cardName">
+    </div> -->
 
-    Name:
+
+    <br><br> Name:
     <div>
         <input type="text" formControlName="cardName">
     </div>
