--- a/pay-ui/src/app/app.component.html
+++ b/pay-ui/src/app/app.component.html
@@ -1,36 +1,49 @@
-<div class="wrapper" *ngIf="isLoggedIn">
-    <a class="login-a-user" (click)="togglepop()">
-        <i class="fa fa-user-circle-o" aria-hidden="true"></i> Hi,
-        <span data-ng-bind="vm.headData.data.customerName | titleCase">{{loginUser}}</span>
-        <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
-    </a>
-    <div class="dropdownChild" [hidden]="isPopIn">
-        <ul>
-            <li>
-                <a class="dropdown-item">My Profile</a></li>
-            <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
-        </ul>
+<!-- <a *ngIf="!isLoggedIn" (click)="toggleLogin()">go to {{showLogin?"Register":"Login"}}</a>
+<app-login [hidden]="!showLogin" *ngIf="!isLoggedIn" (loginParam)="fromLoginPage($event)"></app-login>
+<app-register [hidden]="showLogin" *ngIf="!isLoggedIn" (loginParam)="fromLoginPage($event)"></app-register> -->
+
+
+
+<div class="container">
+    <div class="row" *ngIf="!isLoggedIn">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="panel panel-login">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <a (click)="toggleLogin()" [ngClass]="{'active':showLogin}" id="login-form-link">Login</a>
+                        </div>
+                        <div class="col-xs-6">
+                            <a (click)="toggleLogin()" [ngClass]="{'active':!showLogin}" id="register-form-link">Register</a>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <app-login [hidden]="!showLogin" *ngIf="!isLoggedIn" (loginParam)="fromLoginPage($event)"></app-login>
+                            <app-register [hidden]="showLogin" *ngIf="!isLoggedIn" (loginParam)="fromLoginPage($event)"></app-register>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+    <router-outlet *ngIf="isLoggedIn" class="row">
+    </router-outlet>
+
+
+
 </div>
 
-<a *ngIf="!isLoggedIn" (click)="toggleLogin()">go to {{showLogin?"Register":"Login"}}</a>
-<app-login [hidden]="!showLogin" *ngIf="!isLoggedIn" (loginParam)="fromLoginPage($event)"></app-login>
-<app-register [hidden]="showLogin" *ngIf="!isLoggedIn" (loginParam)="fromLoginPage($event)"></app-register>
+
+
+
+
+
 
 <spinner [spinner]="spinkit.skDoubleBounce" [backgroundColor]="'#337ab7'">
 </spinner>
-
-<router-outlet *ngIf="isLoggedIn">
-</router-outlet>
-
-<!-- <div class=" dropdown show ">
-    <a class="btn btn-secondary dropdown-toggle " href="# " role="button " id="dropdownMenuLink " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-      Dropdown link
-    </a>
-
-    <div class="dropdown-menu " aria-labelledby="dropdownMenuLink ">
-      <a class="dropdown-item " href="# ">Action</a>
-      <a class="dropdown-item " href="# ">Another action</a>
-      <a class="dropdown-item " href="# ">Something else here</a>
-    </div>
-  </div> -->
