--- a/pay-ui/src/app/auth/login/login.component.html
+++ b/pay-ui/src/app/auth/login/login.component.html
@@ -1,48 +1,31 @@
-<div class="panel panel-primary">
-    <p-messages [(value)]="msgs"></p-messages>
-    <div class="panel-heading">
-        Login
-    </div>
+<p-growl [(value)]="msgs"></p-growl>
 
-    <div class="panel-body">
-        <form class="form-horizontal" novalidate (ngSubmit)="login()" [formGroup]="loginForm">
-            <fieldset>
+<form class="form-horizontal" novalidate (ngSubmit)="login()" [formGroup]="loginForm">
+    <fieldset>
 
-                <div class="form-group" [ngClass]="{'has-error': (loginForm.get('email').touched || loginForm.get('email').dirty) && !loginForm.get('email').valid }">
-                    <label class="col-md-2 control-label" for="emailId">Email Address</label>
+        <div class="form-group" [ngClass]="{'has-error': (loginForm.get('email').touched || loginForm.get('email').dirty) && !loginForm.get('email').valid }">
+            <label class="col-md-4 control-label" for="emailId2">Email Address</label>
 
-                    <div class="col-md-6">
-                        <input class="form-control" id="emailId" type="text" placeholder="Email Address (required)" formControlName="email" />
-                        <!-- <span class="help-block" *ngIf="(loginForm.get('email').touched || loginForm.get('email').dirty) && loginForm.get('email').errors">
-                            <span *ngIf="loginForm.get('email').errors.required">
-                                Please enter your email address.
-                            </span>
-                        <span *ngIf="loginForm.controls.email.errors.pattern">
-                                Please enter a valid email address.
-                            </span>
-                        </span> -->
-                    </div>
-                </div>
+            <div class="col-md-7">
+                <input class="form-control" id="emailId2" type="text" placeholder="Email Address (required)" formControlName="email" />
 
-                <div class="form-group" [ngClass]="{'has-error': (loginForm.get('password').touched || 
+            </div>
+        </div>
+
+        <div class="form-group" [ngClass]="{'has-error': (loginForm.get('password').touched || 
                                               loginForm.get('password').dirty) &&
                                               !loginForm.get('password').valid }">
-                    <label class="col-md-2 control-label" for="passwordId">Password</label>
+            <label class="col-md-4 control-label" for="passwordId2">Password</label>
 
-                    <div class="col-md-6">
-                        <input class="form-control" id="passwordId" type="password" placeholder="password" formControlName="password" />
-                        <!-- <span class="help-block" *ngIf="(loginForm.get('password').touched || loginForm.get('password').dirty) && loginForm.get('password').errors">
-                            <span *ngIf="loginForm.get('password').errors.required">
-                                Please enter your password.
-                            </span>
-                        </span> -->
-                    </div>
-                </div>
+            <div class="col-md-7">
+                <input class="form-control" id="passwordId2" type="password" placeholder="password (required)" formControlName="password" />
+            </div>
+        </div>
 
 
-                <div class="form-group">
-                    <div class="col-md-4 col-md-offset-2">
-                        <span>
+        <div class="form-group">
+            <div class="col-md-4 col-md-offset-4">
+                <span>
                             <button class="btn btn-primary"
                                     type="submit"
                                     [disabled]="!loginForm.valid">
@@ -50,9 +33,7 @@
                             </button>
                         </span>
 
-                    </div>
-                </div>
-            </fieldset>
-        </form>
-    </div>
-</div>
+            </div>
+        </div>
+    </fieldset>
+</form>
