--- a/pay-ui/src/app/customer/customer.component.html
+++ b/pay-ui/src/app/customer/customer.component.html
@@ -56,7 +56,7 @@
 
 
                     <div class="form-group">
-                        <label class="col-md-3 control-label" for="emailId">Email Address :</label>
+                        <label class="col-md-3 control-label" for="emailId2">Email Address :</label>
 
                         <div class="col-md-5">
                             <label class="control-label label-alter">{{customer?.email}}</label>
@@ -87,7 +87,7 @@
                         <div class="col-md-2"></div>
                         <div class=" col-md-4 col-md-offset-2 ">
                             <span>
-                            <button  class="btn btn-primary" type="button" (click)="Edit()" >Edit</button>
+                            <button  class="btn btn-primary" type="button" (click)="editCustomer()" >Edit</button>
                         </span>
 
                         </div>
