multiple views fix

--- a/pay-ui/src/app/app.component.html
+++ b/pay-ui/src/app/app.component.html
@@ -1,7 +1,17 @@
-<!-- <a *ngIf="!isLoggedIn" (click)="toggleLogin()">go to {{showLogin?"Register":"Login"}}</a>
-<app-login [hidden]="!showLogin" *ngIf="!isLoggedIn" (loginParam)="fromLoginPage($event)"></app-login>
-<app-register [hidden]="showLogin" *ngIf="!isLoggedIn" (loginParam)="fromLoginPage($event)"></app-register> -->
-
+<div *ngIf="isLoggedIn">
+    <a class="login-a-user" (click)="togglepop()">
+        <i class="fa fa-user-circle-o" aria-hidden="true"></i> Hi,
+        <span data-ng-bind="vm.headData.data.customerName | titleCase">{{loginUser}}</span>
+        <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
+    </a>
+    <div class="dropdownChild" [hidden]="isPopIn">
+        <ul>
+            <li>
+                <a [routerLink]="['/editcustomer']" class="dropdown-item">Edit Profile</a></li>
+            <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
+        </ul>
+    </div>
+</div>
 
 
 <div class="container">
