--- a/pay-ui/src/app/customer/customer.component.html
+++ b/pay-ui/src/app/customer/customer.component.html
@@ -10,7 +10,7 @@
 
             Current Balance: {{walletBalance}}
             <br>
-            <input type="button" value="PAY">
+            <input type="button" value="PAY" (click)="gotoPayment()">
         </div>
 
         <div class="col-sm-7">
