--- a/pay-ui/src/styles.css
+++ b/pay-ui/src/styles.css
@@ -20,7 +20,7 @@
 /* login, registration start*/
 
 body {
-    padding-top: 90px;
+    padding-top: 4px;
     background-color: #fafafa;
 }
 
@@ -37,6 +37,7 @@ body {
      -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2); */
+    margin-top: 90px;
     -webkit-box-shadow: 0px 2px 3px 0px #eee;
     -moz-box-shadow: 0px 2px 3px 0px #eee;
     box-shadow: 0px 2px 3px 0px #eee;
