--- a/pay-ui/src/app/app.component.html
+++ b/pay-ui/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="isLoggedIn">
+
+<!-- <div *ngIf="isLoggedIn">
     <a class="login-a-user" (click)="togglepop()">
         <i class="fa fa-user-circle-o" aria-hidden="true"></i> Hi,
         <span data-ng-bind="vm.headData.data.customerName | titleCase">{{loginUser}}</span>
@@ -10,6 +11,25 @@
                 <a [routerLink]="['/editcustomer']" class="dropdown-item">Edit Profile</a></li>
             <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
         </ul>
+    </div>
+</div> -->
+
+<div *ngIf="isLoggedIn" id="headerLayout">
+    <div class="col-md-2 pull-right" style="margin-right:1%;margin-top:8px;">
+         <a class="login-a-user" (click)="togglepop()">
+            <i class="fa fa-user-circle-o" aria-hidden="true"></i>&nbsp; 
+            <span style="font-size:15px;">Hi, {{loginUser}} krishnaMohan</span>
+            <span  style="font-size:15px;" class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
+        </a>
+        <div class="dropdownChild" [hidden]="isPopIn">
+            <ul>
+                <li>
+                    <a [routerLink]="['/editcustomer']" class="dropdown-item">
+                        <i class="fa fa-user-circle-o" aria-hidden="true"></i>&nbsp;Edit Profile</a></li>
+                <li><a class="dropdown-item" (click)="logout()">
+                        <i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Logout</a></li>
+            </ul>
+        </div>
     </div>
 </div>
 
@@ -42,10 +62,7 @@
     </div>
 
 
-    <router-outlet *ngIf="isLoggedIn" class="row">
-    </router-outlet>
-
-
+    <router-outlet *ngIf="isLoggedIn" class="row"></router-outlet>
 
 </div>
 
@@ -57,3 +74,7 @@
 
 <spinner [spinner]="spinkit.skDoubleBounce" [backgroundColor]="'#337ab7'">
 </spinner>
+
+<nav *ngIf="isLoggedIn" class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+        <p class="text-center" style="margin-top:1%;">Copyright © 2017 Company. All rights reserved.</p>
+      </nav>
